--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - main
+      - master
+      - test
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
